--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "llist (>=0.7.1,<0.8.0)"
 ]
 
 [tool.poetry]
@@ -18,6 +19,10 @@ packages = [{include = "memory_db", from = "src"}]
 name = "ustc"
 url = "https://pypi.mirrors.ustc.edu.cn/simple"
 priority = "primary"
+
+
+[tool.poetry.group.dev.dependencies]
+coverage = "^7.8.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
