--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,8 @@ name = "mem-store"
 version = "0.1.1"
 description = ""
 authors = [
-    { name = "Chang Cheng", email = "changcheng@bwbtech.net" }
+    { name = "Chang Cheng", email = "changcheng@bwbtech.net" },
+    { name = 'Grok' }
 ]
 readme = "README.md"
 requires-python = ">=3.10"
